feat: add endpoint to list publications by author
